Create product name filter for contracts medicinas#78
