# controllers/libv3.js
@@ -98,8 +98,15 @@ const query_definitions = {
     context: "must",
     type: "multi_match",
     match: "phrase_prefix",
-    fields: ["name","contracts.title","other_names.name","identifiers.legalName","contracts.items.description"],
+    fields: ["name","contracts.title","other_names.name","identifiers.legalName"],
     launder: true,
+  },
+  "product_name": {
+    context: "must",
+    type: "multi_match",
+    match: "phrase_prefix",
+    fields: ["contracts.items.description","contracts.items.id"],
+    launder: false,
   },
   // apiFilterName: "identifier",
   // apiFieldNames:["identifiers.id"],
